2009-01-11  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib_maincontext.c: add workaround for ruby 1.9.0. Should
	we try to support 1.9.0? [#2493874]
	Reported by boo. Thanks!!!

2008-12-12  Kouhei Sutou  <kou@cozmixng.org>

	* src/depend (install): glib-enum-types.h exists in $(builddir)
	not $(srcdir). [#2420281]
	Reported by troels knak-nielsen. Thanks!!!

	* TODO: add an entry:
	make log message handler set by Ruby/GLib removable.

2008-12-10  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_type.c: use Mutex instead of rb_thread_critical.
	* src/rbgobj_boxed.c, src/rbgobj_enums.c,
	src/rbgobj_typeinterface.c, src/lib/glib2.rb: follow the above change.

2008-11-19  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_enums.c, test/test_enum.rb: GLib::Flags#| accepts
	empty array.

	* test/test_glib2.rb: move a test that depends of Ruby/GTK2 to
	Ruby/GTK2.

2008-11-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib.h (DBL2NUM): define.

	* src/: use RARRAY_PTR(), RARRAY_LEN() and RSTRING_LEN().

2008-10-25  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_signal.rb: use assert_const_defined.

2008-10-16  Kouhei Sutou  <kou@cozmixng.org>

	* TODO: add.

2008-10-03  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib.h: 0.18.0 -> 0.19.0.

2008-09-30  Andy Spencer

	* src/depend (install): install glib-enum-types.h. [#2106938]

2008-09-30  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib.h (g_key_file_get_type): move to ...
	* src/rbgobject.h: ... here.

2008-09-18  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib_maincontext.c: use VALUE not guint to
	rb_set_end_proc()'s data. This will fix Debian bug [#490305].

2008-09-14  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgobj_object.c (holder_free): fix memory leak.

2008-09-13  Kouhei Sutou  <kou@cozmixng.org>

	* src/lib/mkmf-gnome2.rb (check_cairo): support rcairo in gem.
	Suggested by OBATA Akio. Thanks!!!

2008-09-07  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbglib.h: 0.17.0 -> 0.18.0.
